# gnu_qwo

./: ChangeLog  README  configure.ac  qwo_control
data/: Makefile.am  qwo.1  qwo.desktop.in  qwo_control.in  qworc
src/: Makefile.am  init.c  init.h  main.c  qwo.c  window.c  window.h
